# dds-fmu

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Converter_8hpp_source.html  CustomKeyFilterFactory_8hpp_source.html  CustomKeyFilter_8hpp_source.html  DataMapper_8hpp_source.html  DynamicPubSub_8hpp_source.html  FmuInstance_8hpp_source.html  LoggerAdapters_8hpp_source.html  README.md  README.org  SignalDistributor_8hpp_source.html  annotated.html  auxiliaries_8hpp_source.html  citelist.html  classddsfmu_1_1DataMapper-members.html  classddsfmu_1_1DataMapper.html  classddsfmu_1_1DomainListener-members.html  classddsfmu_1_1DomainListener.html  classddsfmu_1_1DynamicPubSub-members.html  classddsfmu_1_1DynamicPubSub.html  classddsfmu_1_1FmiLogger-members.html  classddsfmu_1_1FmiLogger.html  classddsfmu_1_1FmuInstance-members.html  classddsfmu_1_1FmuInstance.html  classddsfmu_1_1SignalDistributor-members.html  classddsfmu_1_1SignalDistributor.html  classddsfmu_1_1detail_1_1CustomKeyFilter-members.html  classddsfmu_1_1detail_1_1CustomKeyFilter.html  classddsfmu_1_1detail_1_1CustomKeyFilterFactory-members.html  classddsfmu_1_1detail_1_1CustomKeyFilterFactory.html  classes.html  conanfile.py  dds-fmu.tag  dds-fmu_8idl_source.html  dir_2cbd089067abb4b54e5bc1b1e871bc3e.html  dir_4939e1535a9c78a4a46737b61ec76827.html  (+45 more)
.github/: release.yml
.github/workflows/: github-ci.yml
cmake/: replace-in-file.cmake
data/: RenderGuid.cmake
data/config/: dds_profile.xml  ddsfmu_mapping.xml
data/templates/: config.hpp.in  modelDescription.xml.in
data/test_resources/: simple.idl
data/test_resources/config/dds/: dds_profile.xml  ddsfmu_mapping.xml
data/test_resources/config/idl/: dds-fmu.idl
docs/: CMakeLists.txt  custom.css.in  index.md
docs/pdf/: readme.org  sintefconfig.tex  sintefdoc.cls  sintefhistory.sty  sinteflabels.sty  sintefmemo.cls  sintefreport.cls  style.puml
docs/user/: bibs.bib
search/: all_a.js  pages_2.js  searchdata.js
src/configuration/: auxiliaries.cpp  auxiliaries.hpp  model-descriptor.cpp  model-descriptor.hpp
src/configurator/: auxiliaries.cpp  auxiliaries.hpp  idl-loader.cpp  idl-loader.hpp  model-descriptor.cpp  model-descriptor.hpp
src/dds-fmu/: dds-fmu.cpp
src/descriptor/: descriptor.cpp
src/detail/: Converter.cpp  Converter.hpp  CustomKeyFilter.cpp  CustomKeyFilter.hpp  CustomKeyFilterFactory.hpp  DataMapper.cpp  DataMapper.hpp  DynamicPubSub.cpp  DynamicPubSub.hpp  FmuInstance.hpp  LoggerAdapters.hpp  SignalDistributor.cpp  SignalDistributor.hpp  visitors.hpp
src/helper/: Converter.hpp  DataMapper.cpp  DataMapper.hpp  DdsLoader.cpp  DdsLoader.hpp  DynamicPubSub.cpp  DynamicPubSub.hpp  DynamicPublisher.cpp  DynamicPublisher.hpp  DynamicSubscriber.cpp  DynamicSubscriber.hpp  SignalDistributor.cpp  SignalDistributor.hpp
src/idl/: dds-fmu.idl  helloworld.idl  misc.idl  my.idl  trig.idl
src/repacker/: repacker.cpp
src/temporary/: TrigSubscriber.cpp  TrigSubscriber.hpp  modeler.cpp  myuuid.cpp  pubdyntop.cpp  pubdyntop.hpp  subdyntop.cpp  subdyntop.hpp  trigPubSubTypes.cxx  xplora.cpp
src/temporary/executables/: modeler.cpp  pubdyntop.cpp  pubdyntop.hpp  structuriser.cpp  subdyntop.cpp  subdyntop.hpp  trigga.cpp  xplora.cpp
src/temporary/trig/: TrigPublisher.cpp  TrigPublisher.hpp  trig.cxx  trig.h  trigPubSubTypes.h
tests/: CMakeLists.txt  RunTests.cpp  dynamic_pubsub.cpp  hello_main.cpp  hello_pubsub.cpp  hello_pubsub.hpp  keyed_members.cpp  model_description.cpp  other.cpp  pubsub_procedure.cpp  visitors.cpp  visitors.hpp  xtypes.cpp
tools/hooks/: hook_fmu.py  hook_testresults.py
